Fixed #1 and added ability to control avatar's height

--- a/language/en-GB/en-GB.plg_user_cmavatar.ini
+++ b/language/en-GB/en-GB.plg_user_cmavatar.ini
@@ -2,8 +2,10 @@ PLG_USER_CMAVATAR_FIELD_FOLDER_LABEL = "Avatar folder"
 PLG_USER_CMAVATAR_FIELD_FOLDER_DESC = "The path to the folder where user avatars are stored. This path is relative to the root of your webspace. Example: images/avatars. Note: Do not start the path with a slash!"
 PLG_USER_CMAVATAR_FIELD_ALLOWED_EXTENSIONS_LABEL = "Allowed image extensions"
 PLG_USER_CMAVATAR_FIELD_ALLOWED_EXTENSIONS_DESC = "Extensions (file types) which are allowed to upload, the extensions are separated by comma, for example: bmp,gif,jpg,png".
-PLG_USER_CMAVATAR_FIELD_WIDTH_LABEL = "Avatar's width (in pixel)"
-PLG_USER_CMAVATAR_FIELD_WIDTH_DESC = "The avatar file will be resized to this width. The height will be calculated and resized to keep the image's ratio."
+PLG_USER_CMAVATAR_FIELD_WIDTH_LABEL = "Avatar's maximum width (in pixel)"
+PLG_USER_CMAVATAR_FIELD_WIDTH_DESC = "The maximum width of avatar. Avatar file will be resized to this width. The height will be calculated and resized to keep the image's ratio."
+PLG_USER_CMAVATAR_FIELD_HEIGHT_LABEL = "Avatar's maximum height (in pixel)"
+PLG_USER_CMAVATAR_FIELD_HEIGHT_DESC = "The maximum height of avatar. After avatar is resized based on maximum width, if the avatar's height is bigger than this value, avatar file will be resized to this height, the width will be calculated and resized to keep the image's ratio."
 PLG_USER_CMAVATAR_FIELD_MAX_SIZE_LABEL = "Maximum size (in MB)"
 PLG_USER_CMAVATAR_FIELD_MAX_SIZE_DESC = "The maximum size of image which is allowed to upload. Note: your server also has its own maximum limit."
 PLG_USER_CMAVATAR_FIELD_DISPLAY_AVATAR_IN_PROFILE_LABEL = "Display avatar in profile"
